# jisc-wrangler

./: .gitignore  .pre-commit-config.yaml  .python-lint  Makefile  README.md  jisc_alto2txt_wrangler.py  jisc_alto2txt_wrangler_test.py  jisc_wrangler.py  jisc_wrangler_test.py  overview_with_jisc.ipynb  pyproject.toml  requirements.txt
.github/workflows/: test.yml
data/: title_code_lookup.csv
jisc_wrangler/: constants.py  jisc_alto2txt_wrangler.py  jisc_plain_wrangler.py  jisc_wrangler.py  logutils.py  utils.py
tests/: jisc_alto2txt_wrangler_test.py  jisc_wrangler_test.py  test_constants.py  test_logutils.py  test_utils.py  utils_test.py
