[tool.poetry]
name = "jisc-wrangler"
version = "0.1.0"
description = ""
authors = ["Joseph Palmer <jpalmer@turing.ac.uk>", "Tim Hobson <>"]
readme = "README.md"
packages = [{include = "jisc_wrangler"}]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "6.1.2"
pyfakefs = "4.5.1"
mypy = "0.790"
mypy-extensions = "0.4.3"
tqdm = "4.62.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
