[tool.poetry]
name = "jisc-wrangler"
version = "0.1.0"
description = ""
authors = ["Joseph Palmer <jpalmer@turing.ac.uk>", "Tim Hobson <>"]
readme = "README.md"
packages = [{include = "jisc_wrangler"}]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pytest = "^7.2"
pyfakefs = "^4.5.1"
mypy = "^1.1.1"
mypy-extensions = "^1.0.0"
tqdm = "4.62.3"
pre-commit = "^3.2.0"
pylint = "^2.17.0"
black = "^23.1.0"
flake8 = "^5.0.4"
safety = "^2.3.5"
pytest-mock = "^3.10.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
